--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,11 @@ select::-ms-expand {
   color: olivedrab;
   transition: opacity 0.6s cubic-bezier(0.55, 0, 0.75, 0.95);
 }
+@media screen and (min-width: 481px) {
+  .js-close {
+    display: none;
+  }
+}
 
 * {
   box-sizing: border-box;
@@ -243,7 +248,7 @@ h1 {
   padding: 0.86rem;
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 480px) {
   table {
     min-width: 320px;
   }
@@ -261,9 +266,9 @@ h1 {
     color: rgba(255, 255, 255, 0.5);
     padding-right: 10px;
   }
-  table tr.js-expand .expand-content {
+  table tr.js-expand .is-active .expand-content {
     padding: 0.86rem;
-    padding-top: 2.58rem;
+    padding-top: 3.44rem;
   }
 }
 
